--- a/Movie_Exercise/wwwroot/css/site.css
+++ b/Movie_Exercise/wwwroot/css/site.css
@@ -35,3 +35,12 @@ body {
 .table td {
     margin: auto;
 }
+
+main{
+    margin-top: 75px;
+    margin-bottom: 50px;
+}
+
+.card-div {
+    margin-bottom: 20px;
+}
