--- a/Movie_Exercise/Views/Cart/ViewCart.cshtml
+++ b/Movie_Exercise/Views/Cart/ViewCart.cshtml
@@ -6,8 +6,10 @@
 
 @model IEnumerable<Movie_Exercise.Models.ViewModels.CartItemVM>
 
+
 @{
     ViewData["Title"] = "ViewCart";
+
 }
 
 <h1>List of Items</h1>
@@ -28,6 +30,9 @@
                 @Html.DisplayNameFor(model => model.Price)
             </th>
             <th>
+                Total
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.ImgFile)
             </th>
         </tr>
@@ -39,14 +44,17 @@
                 @Html.DisplayFor(modelItem => item.MovieTitle)
             </td>
             <td>
-                <button type="button" onclick="Increment(@item.Id)">+</button>
+                    <button type="button" onclick="Increment(@item.Id)">+</button>
 
-                    <span id="Quantaty"></span>
+                    <span id='@item.Id'>@item.Quantity</span>
                 
-                <button type="button" onclick="Decrement(@item.Id)">-</button>
+                    <button type="button" onclick="Decrement(@item.Id)">-</button>
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Price)
+            </td>
+            <td>
+                    <span onchange="location.reload"> @item.CartItemTotal() </span>
             </td>
             <td>
                 <img src="~/Images/@item.ImgFile" class="cart-img">
@@ -60,26 +68,8 @@
 
 @section Scripts {
     <script>
-        //function Increment(movieId) {
-        //    //event.preventDefault();
-        //    var requestUrl = "/Cart/IncrementCartItem/";
-        //    $.ajax({
-        //        type: "POST",
-        //        url: requestUrl,
-        //        dataType: "json",
-        //        cach: false,
-        //        data: { Id: movieId },
-        //        success: function (data) {
-        //            // alert(JSON.stringify(data)); show entire object in JSON format
-        //            $.each(data, function (i, obj) {
-        //                ('#Quantaty').html(JSON.stringify(data.value));
-        //            })
-        //        },
-        //    })
-        //}
-
+        
          function Increment(movieId) {
-            //event.preventDefault();
             var requestUrl = "/Cart/IncrementCartItem/";
             $.ajax({
                 type: "POST",
@@ -87,23 +77,19 @@
                 dataType: "json",
                 cach: false,
                 data: { Id: movieId },
-                 success: function (data) {
+                success: function (data) {
                     // alert(JSON.stringify(data)); show entire object in JSON format
-                    // Use a regular for-loop
-                        for (let i = 0; i < data.length; i++) { 
-                        $.each(data, function(i, obj){
-                            
-                            $('#Quantaty+').html(JSON.stringify(data.value));
-                        })
-                        }
-                    
+
+                    $.each(data, function (i, obj) {
+                        $('#' + movieId).html(JSON.stringify(data.value));
+                    })
+                    // to make the page reload: location.reload();
                 },
             })
         }
 
 
         function Decrement(movieId) {
-            //event.preventDefault();
             var requestUrl = "/Cart/DecrementCartItem/";
             $.ajax({
                 type: "POST",
@@ -115,8 +101,9 @@
                     // alert(JSON.stringify(data)); show entire object in JSON format
                     
                         $.each(data, function(i, obj){
-                            $('#Quantaty+').html(JSON.stringify(data.value));
+                            $('#'+movieId).html(JSON.stringify(data.value));
                         })
+                        // to make the page reload: location.reload();
                     
                 },
             })
