index and create role for admin controller

--- a/Movie_Exercise/Views/_ViewImports.cshtml
+++ b/Movie_Exercise/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@using Movie_Exercise
 @using Movie_Exercise.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
+@using Microsoft.AspNetCore.Identity
+@addTagHelper Movie_Exercise.CustomTagHelpers.*, Identity
