--- a/Movie_Exercise/Views/Admin/Index.cshtml
+++ b/Movie_Exercise/Views/Admin/Index.cshtml
@@ -1,31 +1,11 @@
-﻿@model IEnumerable<IdentityRole>
-
-@{
-    ViewData["Title"] = "ROLES";
-    //Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
+﻿@{
+    ViewData["Title"] = "Admin";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<h1>Admin Page</h1>
+<h1 class="bg-info text-white">Admin Page</h1>
 
-<h1 class="bg-info text-white">All Roles</h1>
-<a asp-action="Create" class="btn btn-secondary">Create a Role</a>
+<h3>
+    <br /><a class="LinkLine" asp-area="" asp-controller="Roles" asp-action="Index">Roles Manager</a><br />
 
-<table class="table table-sm table-bordered table-bordered">
-    <tr><th>ID</th><th>Name</th><th>Users</th><th>Update</th><th>Delete</th></tr>
-    @foreach (var role in Model)
-    {
-        <tr>
-            <td>@role.Id</td>
-            <td>@role.Name</td>
-            <td i-role="@role.Id"></td>
-            <td><a class="btn btn-sm btn-primary" asp-action="Update" asp-route-id="@role.Id">Update</a></td>
-            <td>
-                <form asp-action="Delete" asp-route-id="@role.Id" method="post">
-                    <button type="submit" class="btn btn-sm btn-danger">
-                        Delete
-                    </button>
-                </form>
-            </td>
-        </tr>
-    }
-</table>
+</h3>
