--- a/Movie_Exercise/Views/Roles/Create.cshtml
+++ b/Movie_Exercise/Views/Roles/Create.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model string
+
 @{
     ViewData["Title"] = "Create";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
@@ -6,7 +7,6 @@
 
 <h1>Create</h1>
 
-@model string
 @{
     ViewData["Title"] = "CREATE ROLE";
 }
