--- a/Movie_Exercise/wwwroot/css/site.css
+++ b/Movie_Exercise/wwwroot/css/site.css
@@ -44,3 +44,19 @@ main{
 .card-div {
     margin-bottom: 20px;
 }
+
+
+.TitleLine {
+    border-bottom: 5px groove dodgerblue;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    color: white;
+}
+
+.LinkLine {
+    border-bottom: 5px double dodgerblue;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    color: white;
+    font-style: italic;
+}
