add some styles to move manager tap on the admin nav bar

--- a/Movie_Exercise/Views/Movies/Index.cshtml
+++ b/Movie_Exercise/Views/Movies/Index.cshtml
@@ -2,9 +2,10 @@
 
 @{
     ViewData["Title"] = "Index";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<h1>Index</h1>
+<h1 class ="bg-info text-white">Index</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -52,7 +53,7 @@
                 @Html.DisplayFor(modelItem => item.Price)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.ImageFile)
+                <img src="~/Images/@item.ImageFile" class="cart-img">
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
