--- a/Movie_Exercise/wwwroot/css/site.css
+++ b/Movie_Exercise/wwwroot/css/site.css
@@ -34,6 +34,12 @@ body {
 
 .table td {
     margin: auto;
+    text-align: center;
+}
+
+.table tr {
+    margin: auto;
+    text-align: center;
 }
 
 main{
