--- a/Movie_Exercise/Views/Movies/Create.cshtml
+++ b/Movie_Exercise/Views/Movies/Create.cshtml
@@ -2,9 +2,11 @@
 
 @{
     ViewData["Title"] = "Create";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
+
 }
 
-<h1>Create</h1>
+<h1 class="bg-info text-white">Create</h1>
 
 <h4>Movie</h4>
 <hr />
