--- a/Movie_Exercise/Views/Movies/Delete.cshtml
+++ b/Movie_Exercise/Views/Movies/Delete.cshtml
@@ -2,9 +2,11 @@
 
 @{
     ViewData["Title"] = "Delete";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
+
 }
 
-<h1>Delete</h1>
+<h1 class="bg-info text-white">Delete</h1>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
