--- a/Movie_Exercise/Views/Movies/Details.cshtml
+++ b/Movie_Exercise/Views/Movies/Details.cshtml
@@ -2,9 +2,11 @@
 
 @{
     ViewData["Title"] = "Details";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
+
 }
 
-<h1>Details</h1>
+<h1 class="bg-info text-white">Details</h1>
 
 <div>
     <h4>Movie</h4>
