--- a/Movie_Exercise/Views/Movies/Edit.cshtml
+++ b/Movie_Exercise/Views/Movies/Edit.cshtml
@@ -2,9 +2,11 @@
 
 @{
     ViewData["Title"] = "Edit";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
+
 }
 
-<h1>Edit</h1>
+<h1 class="bg-info text-white">Edit</h1>
 
 <h4>Movie</h4>
 <hr />
