--- a/Movie_Exercise/Views/Shared/_LayoutAdmin.cshtml
+++ b/Movie_Exercise/Views/Shared/_LayoutAdmin.cshtml
@@ -26,16 +26,10 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Admin" asp-action="RoleIndex">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Movies" asp-action="Gallery">Gallery</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Movies" asp-action="Index">Movies Manager</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="Customers" asp-action="Index">Customers</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
