--- a/Movie_Exercise/Views/Admin/Index.cshtml
+++ b/Movie_Exercise/Views/Admin/Index.cshtml
@@ -7,5 +7,5 @@
 
 <h3>
     <br /><a class="LinkLine" asp-area="" asp-controller="Roles" asp-action="Index">Roles Manager</a><br />
-
+    <br /><a class="LinkLine" asp-area="" asp-controller="Movies" asp-action="Index">Movies Manager</a><br />
 </h3>
