--- a/Movie_Exercise/Views/Cart/ViewCart.cshtml
+++ b/Movie_Exercise/Views/Cart/ViewCart.cshtml
@@ -72,60 +72,78 @@
     
 </form>*@
 
-<!-- JQUERY STEP -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-steps/1.1.0/jquery.steps.min.js"></script>
-<div class="wrapper">
-    <form action="Create" id="checkout-form" style="display:none;">
-        <div id="wizard">
-            <!-- SECTION 1 -->
-            <h4></h4>
-            <section>
-                <div class="form-row"> <input type="text" class="form-control" placeholder="Name"> </div>
-                <div class="form-row"> <input type="text" class="form-control" placeholder="Email"> </div>
-                <div class="form-row"> <input type="text" class="form-control" placeholder="Phone number"> </div>
-                <div class="form-row"> <input type="text" class="form-control" placeholder="Street address"> </div>
-            </section> <!-- SECTION 2 -->
-            <h4></h4>
-            <section>
-                <div class="form-row"> <input type="text" class="form-control" placeholder="country"> </div>
-                <div class="form-row"> <input type="text" class="form-control" placeholder="zip code"> </div>
-                <div class="form-row" style="margin-bottom: 18px"> <textarea name="" id="" class="form-control" placeholder="Any order note about delivery or special offer" style="height: 108px"></textarea> </div>
-            </section> <!-- SECTION 3 -->
-            <h4></h4>
-            <section>
-                <div class="product">
-                    <div class="item">
-                        <div class="left">
-                            <a href="#" class="thumb"> <img src="https://i.imgur.com/yYu3Hbl.jpg" alt=""> </a>
-                            <div class="purchase">
-                                <h6> <a href="#">Macbook Air Laptop</a> </h6> <span>x1</span>
-                            </div>
-                        </div> <span class="price">$290</span>
-                    </div>
-                    <div class="item">
-                        <div class="left">
-                            <a href="#" class="thumb"> <img src="https://www.businessinsider.in/thumb/msid-70101317,width-600,resizemode-4,imgsize-87580/tech/ways-to-increase-mobile-phone-speed/13d0e0722dbca5aa91e16a8ae2a744e5.jpg" alt=""> </a>
-                            <div class="purchase">
-                                <h6> <a href="#">Mobile Phone Mi</a> </h6> <span>x1</span>
-                            </div>
-                        </div> <span class="price">$124</span>
-                    </div>
+<div class="form-body">
+    <div class="row">
+        <div class="form-holder">
+            <div class="form-content">
+                <div class="form-items">
+                    <h3>Register Today</h3>
+                    <p>Fill in the data below.</p>
+                    <form class="requires-validation" novalidate>
+
+                        <div class="col-md-12">
+                            <input class="form-control" type="text" name="name" placeholder="Full Name" required>
+                            <div class="valid-feedback">Username field is valid!</div>
+                            <div class="invalid-feedback">Username field cannot be blank!</div>
+                        </div>
+
+                        <div class="col-md-12">
+                            <input class="form-control" type="email" name="email" placeholder="E-mail Address" required>
+                            <div class="valid-feedback">Email field is valid!</div>
+                            <div class="invalid-feedback">Email field cannot be blank!</div>
+                        </div>
+
+                        <div class="col-md-12">
+                            <select class="form-select mt-3" required>
+                                <option selected disabled value="">Position</option>
+                                <option value="jweb">Junior Web Developer</option>
+                                <option value="sweb">Senior Web Developer</option>
+                                <option value="pmanager">Project Manager</option>
+                            </select>
+                            <div class="valid-feedback">You selected a position!</div>
+                            <div class="invalid-feedback">Please select a position!</div>
+                        </div>
+
+
+                        <div class="col-md-12">
+                            <input class="form-control" type="password" name="password" placeholder="Password" required>
+                            <div class="valid-feedback">Password field is valid!</div>
+                            <div class="invalid-feedback">Password field cannot be blank!</div>
+                        </div>
+
+
+                        <div class="col-md-12 mt-3">
+                            <label class="mb-3 mr-1" for="gender">Gender: </label>
+
+                            <input type="radio" class="btn-check" name="gender" id="male" autocomplete="off" required>
+                            <label class="btn btn-sm btn-outline-secondary" for="male">Male</label>
+
+                            <input type="radio" class="btn-check" name="gender" id="female" autocomplete="off" required>
+                            <label class="btn btn-sm btn-outline-secondary" for="female">Female</label>
+
+                            <input type="radio" class="btn-check" name="gender" id="secret" autocomplete="off" required>
+                            <label class="btn btn-sm btn-outline-secondary" for="secret">Secret</label>
+                            <div class="valid-feedback mv-up">You selected a gender!</div>
+                            <div class="invalid-feedback mv-up">Please select a gender!</div>
+                        </div>
+
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
+                            <label class="form-check-label">I confirm that all data are correct</label>
+                            <div class="invalid-feedback">Please confirm that the entered data are all correct!</div>
+                        </div>
+
+
+                        <div class="form-button mt-3">
+                            <button id="submit" type="submit" class="btn btn-primary">Register</button>
+                        </div>
+                    </form>
                 </div>
-                <div class="checkout">
-                    <div class="subtotal"> <span class="heading">Subtotal</span> <span class="total">$364</span> </div>
-                </div>
-            </section> <!-- SECTION 4 -->
-            <h4></h4>
-            <section>
-                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 130.2 130.2">
-                    <circle class="path circle" fill="none" stroke="#73AF55" stroke-width="6" stroke-miterlimit="10" cx="65.1" cy="65.1" r="62.1" />
-                    <polyline class="path check" fill="none" stroke="#73AF55" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" points="100.2,40.2 51.5,88.8 29.8,67.5 " />
-                </svg>
-                <p class="success">Order placed successfully. Your order will be dispacted soon. meanwhile you can track your order in my order section.</p>
-            </section>
+            </div>
         </div>
-    </form>
+    </div>
 </div>
+
 
 <script>
     function toggleForm() {
